<resources>
    <string name="app_name">Driver Station 2017</string>
    <string name="cam_left">Left Camera</string>
    <string name="cam_right">Right Camera</string>
    <string name="cam_none">No Camera</string>
    <string name="publisher_connecting">Connecting to robot...</string>
    <string name="publisher_active">ROBOT CONNECTED</string>
    <string name="autonomy_disabled">AUTONOMY DISABLED</string>
    <string name="autonomy_enabled">AUTONOMY ENABLED</string>
    <string name="lift_angle_label">Lift angle:</string>
    <string name="lift_current_label">Lift current:</string>
    <string name="limit_override">! LIFT LIMIT OVERRIDE !</string>
    <string name="drum_rpm_label">Drum RPM:</string>
    <string name="drum_current_label">Drum current:</string>
    <string name="drive_current_label">Drive current:</string>
    <string name="storage_current">Storage current:</string>
</resources>
