<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0099cc" android:padding="4dp" tools:context=".HUDActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" android:adjustViewBounds="false"
        android:alpha="0.25" android:src="@drawable/astrobotics_logo"/>

    <View
        android:id="@+id/robot_status"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/indicator"/>

    <View
        android:id="@+id/controller_status"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/indicator"/>

    <TextView
        android:id="@+id/wifiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cam_text_color"/>

    <TextView
        android:id="@+id/autonomy_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/robot_status" android:layout_marginTop="4dp"
        android:textColor="@color/status_text_color"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" android:orientation="vertical"
        android:layout_below="@+id/wifiLabel" android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">
        <TextView
            android:id="@+id/active_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ActivePublisher"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" android:text="@string/publisher_connecting"/>
        <ProgressBar
            android:id="@+id/active_publisher_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true" android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:orientation="vertical">
        <TextView
            android:id="@+id/lift_angle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginRight="4dp"
            android:text="@string/lift_angle_label" android:textSize="28sp"/>
        <TextView
            android:id="@+id/lift_angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lift_angle_label"
            android:layout_toRightOf="@id/lift_angle_label" android:textSize="38sp"/>
        <TextView
            android:id="@+id/lift_current_label" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lift_angle_label" android:layout_marginRight="4dp"
            android:text="@string/lift_current_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/lift_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lift_angle_label"
            android:layout_toRightOf="@id/lift_current_label" android:textSize="22sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_marginLeft="300sp" android:orientation="vertical">
        <TextView
            android:id="@+id/drum_rpm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginRight="4dp"
            android:text="@string/drum_rpm_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/drum_rpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/drum_rpm_label"
            android:layout_toRightOf="@id/drum_rpm_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/drum_current_label" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drum_rpm_label" android:layout_marginRight="4dp"
            android:text="@string/drum_current_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/drum_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drum_rpm_label"
            android:layout_toRightOf="@id/drum_current_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/drive_current_label" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drum_current_label" android:layout_marginRight="4dp"
            android:text="@string/drive_current_label" android:textSize="22sp"/>
        <TextView
            android:id="@+id/drive_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drum_current_label"
            android:layout_toRightOf="@id/drive_current_label" android:textSize="22sp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/battery_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/limit_override"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_above="@+id/logo"
        android:layout_centerHorizontal="true" android:layout_marginBottom="11dp"
        android:text="@string/limit_override"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#FF0000"/>

</RelativeLayout>
